<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Welcome -->
    <string name="app_name">锄大地</string>
    <string name="hello_world">You are welcome!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="startbutton">开始游戏</string>
    <string name="setbutton">游戏设置</string>
    <string name="helpbutton">帮助</string>
    <string name="aboutbutton">关于</string>
    
    <string name="returnbutton">返回</string>
    <string name="abstractbutton">简介</string>
    <string name="gesturebutton">手势</string>
    <string name="rulebutton">规则</string>
    <string name="cardtypebutton">牌型</string>
    <string name="scorecalbutton">计分</string>
    
    <string name="title_activity_game">GameActivity</string>
    <string name="duijia">对家</string>
    <string name="shangjia">上家</string>
    <string name="xiajia">下家</string>
    <string name="chupai">出牌</string>
    <string name="pass">跳过</string>

</resources>