<?xml version="1.0" encoding="utf-8"?>
   <com.example.view.HelpView
		android:id="@+id/help"
		xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical"
    	android:background="@drawable/bgcolor">
	
	    <Button 
	        android:id="@+id/returnbutton"
	        android:layout_width="70dp"
	        android:layout_height="40dp"
	        android:background="@drawable/button_selector_bo"
	        android:text="@string/returnbutton"
	        android:layout_marginTop="0dp"
	        android:layout_marginLeft="0dp"
	        android:layout_gravity="left"
	        android:layout_centerInParent="true"
	        android:textColor="#ffffff"
	        android:textSize="17sp"
	        android:elevation="5dp"/>
	    
	    <RadioGroup
	        android:id="@+id/helpradio"
	        android:layout_marginLeft="80dp"
    		android:layout_marginRight="80dp"  
	        android:gravity="center"  
	        android:orientation="horizontal"
	        android:layout_marginTop="10dp"    
	        android:layout_width="match_parent"     
	        android:layout_height="wrap_content"  
	        >  
	        <RadioButton     
	            android:id="@+id/abstractbutton"
	            android:text="@string/abstractbutton"   
	            android:textSize="14sp"     
	            android:textColor="#ffffff"    
	            android:layout_width="0dp"
	        	android:layout_height="35dp"
	            android:layout_weight="1"  
	            android:checked="true"  
	            android:gravity="center" 
	            android:button="@null"
	            android:background="@drawable/radio_selector_ood"  
	            />
	        
	        <RadioButton     
	            android:id="@+id/gesturebutton"
	            android:text="@string/gesturebutton"   
	            android:textSize="14sp"     
	            android:textColor="#ffffff"    
	            android:layout_width="0dp"
	        	android:layout_height="35dp"
	            android:layout_weight="1"
	            android:gravity="center" 
	            android:button="@null"
	            android:background="@drawable/radio_selector_ood"  
	            />
	        
	        <RadioButton     
	            android:id="@+id/rulebutton"
	            android:text="@string/rulebutton"   
	            android:textSize="14sp"     
	            android:textColor="#ffffff"    
	            android:layout_width="0dp"
	        	android:layout_height="35dp"
	            android:layout_weight="1"
	            android:gravity="center" 
	            android:button="@null"
	            android:background="@drawable/radio_selector_ood"  
	            />
	        
	        <RadioButton     
	            android:id="@+id/cardtypebutton"
	            android:text="@string/cardtypebutton"   
	            android:textSize="14sp"     
	            android:textColor="#ffffff"    
	            android:layout_width="0dp"
	        	android:layout_height="35dp"
	            android:layout_weight="1"
	            android:gravity="center" 
	            android:button="@null"
	            android:background="@drawable/radio_selector_ood"  
	            />
	        
	        <RadioButton     
	            android:id="@+id/scorecalbutton"
	            android:text="@string/scorecalbutton"   
	            android:textSize="14sp"     
	            android:textColor="#ffffff"    
	            android:layout_width="0dp"
	        	android:layout_height="35dp"
	            android:layout_weight="1"
	            android:gravity="center" 
	            android:button="@null"
	            android:background="@drawable/radio_selector_ood"  
	            />
	    </RadioGroup>
	    
	    <ImageView 
	        android:id="@+id/helpPic"
	        android:scaleType="fitXY"
            android:layout_width="520dp"
            android:layout_height="220dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/help1"/>
	    
    </com.example.view.HelpView>
