<?xml version="1.0" encoding="utf-8"?>
   <com.example.view.MenuView
		android:id="@+id/menu"
		xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:background="@drawable/bg">
	
	    <Button 
	        android:id="@+id/startbutton"
	        android:layout_width="160dp"
	        android:layout_height="44dp"
	        android:background="@drawable/button_selector_bo"
	        android:text="@string/startbutton"
	        android:layout_marginTop="160dp"
	        android:layout_gravity="end"
	        android:layout_marginRight="40dp"
	        android:layout_centerInParent="true"
	        android:textColor="#ffffff"
	        android:textSize="13sp"
	        android:elevation="5dp"/>
	    
	    <Button 
	        android:id="@+id/setbutton"
	        android:layout_width="160dp"
	        android:layout_height="44dp"
	        android:background="@drawable/button_selector_bo"
	        android:text="@string/setbutton"
	        android:layout_marginTop="20dp"
	        android:layout_gravity="end"
	        android:layout_marginRight="40dp"
	        android:layout_centerInParent="true"
	        android:textColor="#ffffff"
	        android:textSize="13sp"
	        android:elevation="5dp"/>
	    
	    <LinearLayout 
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginTop="20dp"
    		android:layout_gravity="end"
    		android:orientation="horizontal">
	    
	    <Button 
	        android:id="@+id/helpbutton"
	        android:layout_width="60dp"
	        android:layout_height="38dp"
	        android:background="@drawable/button_selector_bo"
	        android:text="@string/helpbutton"
	        android:layout_gravity="end"
	        android:layout_marginRight="40dp"
	        android:layout_centerInParent="true"
	        android:textColor="#ffffff"
	        android:textSize="12sp"
	        android:elevation="5dp"/>
	    
	    <Button 
	        android:id="@+id/aboutbutton"
	        android:layout_width="60dp"
	        android:layout_height="38dp"
	        android:background="@drawable/button_selector_bo"
	        android:text="@string/aboutbutton"
	        android:layout_gravity="end"
	        android:layout_marginRight="40dp"
	        android:layout_centerInParent="true"
	        android:textColor="#ffffff"
	        android:textSize="12sp"
	        android:elevation="5dp"/>
	    
	    </LinearLayout>
	    
    </com.example.view.MenuView>
